--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "adaptar-portfolio-para-html",
+    "name": "Natasha Brandão - Analista de Dados",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
