--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Natasha Brandão - Analista de Dados",
+    "name": "natasha-brandao-analista-de-dados",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
